[NMMA-200] fix booth view template issue from theme debug hints causing extra spacing on local

--- a/docroot/themes/custom/boatshow/sass/pages/_sailing-at-the-show.scss
+++ b/docroot/themes/custom/boatshow/sass/pages/_sailing-at-the-show.scss
@@ -24,14 +24,6 @@
   margin-top: 5px;
   margin-bottom: 5px;
 
-  .booth-location {
-    &:after {
-      display:inline;
-      content: ':';
-      margin-left: -4px;
-    }
-  }
-
   .views-row {
     float: none;
   }
